build(mvn): format java code with fmt-maven-plugin