@@ -17,12 +17,15 @@
  *                                                                         *
  * *********************************************************************** */
 
-package org.matsim.contrib.commercialTrafficApplications.jointDemand.examples;/*
- * created by jbischoff, 03.05.2019
- */
+package org.matsim.contrib.commercialTrafficApplications.jointDemand.examples; /*
+                                                                                * created by jbischoff, 03.05.2019
+                                                                                */
 
 import static org.matsim.core.config.ConfigUtils.loadConfig;
 
+import java.io.File;
+import java.io.IOException;
+import java.net.URL;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.matsim.api.core.v01.Scenario;
@@ -36,119 +39,130 @@ import org.matsim.contrib.drt.run.DrtControlerCreator;
 import org.matsim.contrib.drt.run.MultiModeDrtConfigGroup;
 import org.matsim.contrib.dvrp.run.DvrpConfigGroup;
 import org.matsim.contrib.dvrp.run.DvrpQSimComponents;
-import org.matsim.freight.carriers.FreightCarriersConfigGroup;
-import org.matsim.freight.carriers.CarriersUtils;
 import org.matsim.core.config.Config;
 import org.matsim.core.config.ConfigUtils;
-import org.matsim.core.config.groups.ScoringConfigGroup;
 import org.matsim.core.config.groups.QSimConfigGroup;
 import org.matsim.core.config.groups.ReplanningConfigGroup;
+import org.matsim.core.config.groups.ScoringConfigGroup;
 import org.matsim.core.controler.Controler;
 import org.matsim.core.controler.OutputDirectoryHierarchy;
 import org.matsim.core.replanning.strategies.DefaultPlanStrategiesModule;
 import org.matsim.core.scenario.ScenarioUtils;
-
-import java.io.File;
-import java.io.IOException;
-import java.net.URL;
+import org.matsim.freight.carriers.CarriersUtils;
+import org.matsim.freight.carriers.FreightCarriersConfigGroup;
 
 class RunJointDemandDRTExample {
 
-    private static final  String EXAMPLE_CONFIG = "scenarios/grid/jointDemand_config.xml";
-    private static final Logger log = LogManager.getLogger(RunJointDemandDRTExample.class);
+  private static final String EXAMPLE_CONFIG = "scenarios/grid/jointDemand_config.xml";
+  private static final Logger log = LogManager.getLogger(RunJointDemandDRTExample.class);
 
-    public static void main(String[] args) throws IOException {
-        final URL configUrl;
-        if (args.length > 0) {
-            log.info("Starting simulation run with the following arguments:");
-            configUrl = new URL(args[0]);
-            log.info("config URL: " + configUrl);
-        } else {
-            File localConfigFile = new File(EXAMPLE_CONFIG);
-            if (localConfigFile.exists()) {
-                log.info("Starting simulation run with the local example config file");
-                configUrl = localConfigFile.toURI().toURL();
-            } else {
-                log.info("Starting simulation run with the example config file from GitHub repository");
-                configUrl = new URL("https://raw.githubusercontent.com/matsim-org/matsim/master/contribs/commercialTrafficApplications/"
-                        + EXAMPLE_CONFIG);
-            }
-        }
-        new RunJointDemandDRTExample().run(configUrl);
+  public static void main(String[] args) throws IOException {
+    final URL configUrl;
+    if (args.length > 0) {
+      log.info("Starting simulation run with the following arguments:");
+      configUrl = new URL(args[0]);
+      log.info("config URL: " + configUrl);
+    } else {
+      File localConfigFile = new File(EXAMPLE_CONFIG);
+      if (localConfigFile.exists()) {
+        log.info("Starting simulation run with the local example config file");
+        configUrl = localConfigFile.toURI().toURL();
+      } else {
+        log.info("Starting simulation run with the example config file from GitHub repository");
+        configUrl =
+            new URL(
+                "https://raw.githubusercontent.com/matsim-org/matsim/master/contribs/commercialTrafficApplications/"
+                    + EXAMPLE_CONFIG);
+      }
     }
+    new RunJointDemandDRTExample().run(configUrl);
+  }
 
-    public void run(URL configURL){
-        Config config = loadConfig(configURL);
-        prepareConfig(config);
-        DrtConfigs.adjustMultiModeDrtConfig(MultiModeDrtConfigGroup.get(config), config.scoring(),
-                config.routing());
+  public void run(URL configURL) {
+    Config config = loadConfig(configURL);
+    prepareConfig(config);
+    DrtConfigs.adjustMultiModeDrtConfig(
+        MultiModeDrtConfigGroup.get(config), config.scoring(), config.routing());
 
-        Scenario scenario = DrtControlerCreator.createScenarioWithDrtRouteFactory(config);
-        ScenarioUtils.loadScenario(scenario);
-        CarriersUtils.loadCarriersAccordingToFreightConfig(scenario); //assumes that input file paths are set in FreightCarriersConfigGroup
-        //alternatively, one can read in the input Carriers and CarrierVehicleTypes manually and use
-        //CarrierControlerUtils.getCarriers(scenario) and CarrierControlerUtils.getCarrierVehicleTypes(scenario)
+    Scenario scenario = DrtControlerCreator.createScenarioWithDrtRouteFactory(config);
+    ScenarioUtils.loadScenario(scenario);
+    CarriersUtils.loadCarriersAccordingToFreightConfig(
+        scenario); // assumes that input file paths are set in FreightCarriersConfigGroup
+    // alternatively, one can read in the input Carriers and CarrierVehicleTypes manually and use
+    // CarrierControlerUtils.getCarriers(scenario) and
+    // CarrierControlerUtils.getCarrierVehicleTypes(scenario)
 
-        Controler controler = new Controler(scenario);
-        controler.addOverridingModule(new JointDemandModule());
+    Controler controler = new Controler(scenario);
+    controler.addOverridingModule(new JointDemandModule());
 
-        controler.configureQSimComponents(DvrpQSimComponents.activateAllModes(MultiModeDrtConfigGroup.get(config)));
-        controler.run();
+    controler.configureQSimComponents(
+        DvrpQSimComponents.activateAllModes(MultiModeDrtConfigGroup.get(config)));
+    controler.run();
+  }
 
-    }
+  private static void prepareConfig(Config config) {
+    loadConfigGroups(config);
 
-    private static void prepareConfig(Config config) {
-        loadConfigGroups(config);
+    config
+        .qsim()
+        .setSimStarttimeInterpretation(QSimConfigGroup.StarttimeInterpretation.onlyUseStarttime);
+    ReplanningConfigGroup.StrategySettings changeExpBeta =
+        new ReplanningConfigGroup.StrategySettings();
+    changeExpBeta.setStrategyName(DefaultPlanStrategiesModule.DefaultSelector.ChangeExpBeta);
+    changeExpBeta.setWeight(0.5);
+    config.replanning().addStrategySettings(changeExpBeta);
+    ReplanningConfigGroup.StrategySettings changeServiceOperator =
+        new ReplanningConfigGroup.StrategySettings();
+    changeServiceOperator.setStrategyName(ChangeCommercialJobOperator.SELECTOR_NAME);
+    changeServiceOperator.setWeight(0.5);
+    config.replanning().addStrategySettings(changeServiceOperator);
 
+    config.replanning().setFractionOfIterationsToDisableInnovation(.8);
+    ScoringConfigGroup.ActivityParams home = new ScoringConfigGroup.ActivityParams("home");
+    home.setTypicalDuration(14 * 3600);
+    config.scoring().addActivityParams(home);
+    ScoringConfigGroup.ActivityParams work = new ScoringConfigGroup.ActivityParams("work");
+    work.setTypicalDuration(14 * 3600);
+    work.setOpeningTime(8 * 3600);
+    work.setClosingTime(8 * 3600);
+    config.scoring().addActivityParams(work);
+    config.controller().setWriteEventsInterval(1);
+    config
+        .controller()
+        .setOutputDirectory(
+            "output/commercialTrafficApplications/jointDemand/RunJointDemandUsingDRTExample");
+    config
+        .controller()
+        .setOverwriteFileSetting(
+            OutputDirectoryHierarchy.OverwriteFileSetting.deleteDirectoryIfExists);
 
-        config.qsim().setSimStarttimeInterpretation(QSimConfigGroup.StarttimeInterpretation.onlyUseStarttime);
-        ReplanningConfigGroup.StrategySettings changeExpBeta = new ReplanningConfigGroup.StrategySettings();
-        changeExpBeta.setStrategyName(DefaultPlanStrategiesModule.DefaultSelector.ChangeExpBeta);
-        changeExpBeta.setWeight(0.5);
-        config.replanning().addStrategySettings(changeExpBeta);
-        ReplanningConfigGroup.StrategySettings changeServiceOperator = new ReplanningConfigGroup.StrategySettings();
-        changeServiceOperator.setStrategyName(ChangeCommercialJobOperator.SELECTOR_NAME);
-        changeServiceOperator.setWeight(0.5);
-        config.replanning().addStrategySettings(changeServiceOperator);
+    config.qsim().setEndTime(26 * 3600);
+    config.qsim().setSimEndtimeInterpretation(QSimConfigGroup.EndtimeInterpretation.onlyUseEndtime);
 
-        config.replanning().setFractionOfIterationsToDisableInnovation(.8);
-        ScoringConfigGroup.ActivityParams home = new ScoringConfigGroup.ActivityParams("home");
-        home.setTypicalDuration(14 * 3600);
-        config.scoring().addActivityParams(home);
-        ScoringConfigGroup.ActivityParams work = new ScoringConfigGroup.ActivityParams("work");
-        work.setTypicalDuration(14 * 3600);
-        work.setOpeningTime(8 * 3600);
-        work.setClosingTime(8 * 3600);
-        config.scoring().addActivityParams(work);
-        config.controller().setWriteEventsInterval(1);
-        config.controller().setOutputDirectory("output/commercialTrafficApplications/jointDemand/RunJointDemandUsingDRTExample");
-        config.controller()
-                .setOverwriteFileSetting(OutputDirectoryHierarchy.OverwriteFileSetting.deleteDirectoryIfExists);
+    config.controller().setLastIteration(5);
+  }
 
-        config.qsim().setEndTime(26 * 3600);
-        config.qsim().setSimEndtimeInterpretation(QSimConfigGroup.EndtimeInterpretation.onlyUseEndtime);
+  private static void loadConfigGroups(Config config) {
+    ConfigUtils.addOrGetModule(config, DvrpConfigGroup.class);
+    MultiModeDrtConfigGroup multiModeDrtConfigGroup =
+        ConfigUtils.addOrGetModule(config, MultiModeDrtConfigGroup.class);
 
-        config.controller().setLastIteration(5);
-    }
+    DrtConfigGroup drtCfg = new DrtConfigGroup();
+    drtCfg.maxWaitTime = 2 * 3600;
+    drtCfg.maxTravelTimeAlpha = 5;
+    drtCfg.maxTravelTimeBeta = 15 * 60;
+    drtCfg.stopDuration = 60;
+    drtCfg.vehiclesFile = "jointDemand_vehicles.xml";
+    multiModeDrtConfigGroup.addParameterSet(drtCfg);
+    drtCfg.addDrtInsertionSearchParams(new ExtensiveInsertionSearchParams() {});
 
-    private static void loadConfigGroups(Config config) {
-        ConfigUtils.addOrGetModule(config, DvrpConfigGroup.class);
-        MultiModeDrtConfigGroup multiModeDrtConfigGroup = ConfigUtils.addOrGetModule(config, MultiModeDrtConfigGroup.class);
+    JointDemandConfigGroup jointDemandConfigGroup =
+        ConfigUtils.addOrGetModule(config, JointDemandConfigGroup.class);
+    jointDemandConfigGroup.setFirstLegTraveltimeBufferFactor(1.5);
 
-        DrtConfigGroup drtCfg = new DrtConfigGroup();
-        drtCfg.maxWaitTime = 2 * 3600;
-        drtCfg.maxTravelTimeAlpha = 5;
-        drtCfg.maxTravelTimeBeta = 15 * 60;
-        drtCfg.stopDuration = 60;
-        drtCfg.vehiclesFile = "jointDemand_vehicles.xml";
-        multiModeDrtConfigGroup.addParameterSet(drtCfg);
-        drtCfg.addDrtInsertionSearchParams(new ExtensiveInsertionSearchParams() {});
-
-        JointDemandConfigGroup jointDemandConfigGroup = ConfigUtils.addOrGetModule(config, JointDemandConfigGroup.class);
-        jointDemandConfigGroup.setFirstLegTraveltimeBufferFactor(1.5);
-
-        FreightCarriersConfigGroup freightCarriersConfigGroup = ConfigUtils.addOrGetModule(config, FreightCarriersConfigGroup.class);
-        freightCarriersConfigGroup.setCarriersFile("jointDemand_carriers_drt.xml");
-        freightCarriersConfigGroup.setCarriersVehicleTypesFile("jointDemand_vehicleTypes.xml");
-    }
+    FreightCarriersConfigGroup freightCarriersConfigGroup =
+        ConfigUtils.addOrGetModule(config, FreightCarriersConfigGroup.class);
+    freightCarriersConfigGroup.setCarriersFile("jointDemand_carriers_drt.xml");
+    freightCarriersConfigGroup.setCarriersVehicleTypesFile("jointDemand_vehicleTypes.xml");
+  }
 }
